--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ 'ubuntu-20.04' ]
-        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
+        python-version: [ '3.8', '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
       - name: Checkout project
@@ -43,10 +43,10 @@ jobs:
         shell: bash -l {0}
         run: |
           mkdir -p ./vtk/build
-          wget https://www.vtk.org/files/release/9.2/VTK-9.2.5.tar.gz  # Update this for newer releases of VTK
-          tar -zxf VTK-9.2.5.tar.gz --directory ./vtk/
+          wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
-          cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.5
+          cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
           ninja
           python3 setup.py bdist_wheel
           cd ../../
