--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ 'ubuntu-22.04', 'macos-11', 'windows-2019' ]
-        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
+        python-version: [ '3.8', '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
 
@@ -66,13 +66,13 @@ jobs:
         if: ${{ matrix.os != 'ubuntu-22.04' }}
         shell: bash -l {0}
         run: |
-          conda install -c cadquery -n cadquery-ocp -y ocp==7.7.1.* vtk=9.2.*
+          conda install -c cadquery -n cadquery-ocp -y ocp=7.7.2.* vtk=9.2.*
 
       - name: Conda Deps Setup Linux
         if: ${{ matrix.os == 'ubuntu-22.04' }}
         shell: bash -l {0}
         run: |
-          conda install -c cadquery -n cadquery-ocp -y ocp==7.7.1.* vtk=9.2.* occt=7.7.1.*
+          conda install -c cadquery -n cadquery-ocp -y ocp=7.7.2.* vtk=9.2.* occt=7.7.2=all*
 
       - name: Pip Deps Setup 1
         shell: bash -l {0}
