Trying to figure out why python command is not found

--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           #miniforge-version: latest
           miniconda-version: latest
-          activate-environment: cadquery-ocp
+          activate-environment: base
           python-version: ${{ matrix.python-version }}
           channels: cadquery, conda-forge, defaults
 
