--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -52,7 +52,8 @@ jobs:
           #miniforge-version: latest
           miniconda-version: latest
           activate-environment: build-env
-          python-version: ${{ matrix.python-version }}
+          # python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
           channels: cadquery, conda-forge, defaults
 
       - name: Ubuntu Deps Setup
