--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -16,8 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ 'macos-14' ]  #[ 'ubuntu-22.04', 'macos-11', 'macos-14', 'windows-2019' ]
-        # python-version: [ '3.9', '3.10', '3.11', '3.12' ]
-        python-version: [ '3.10' ]
+        python-version: [ '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
 
@@ -53,8 +52,7 @@ jobs:
           #miniforge-version: latest
           miniconda-version: latest
           activate-environment: build-env
-          # python-version: ${{ matrix.python-version }}
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
           channels: cadquery, conda-forge, defaults
 
       - name: Ubuntu Deps Setup
