--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -1,4 +1,4 @@
-name: Local Build Method of Creating Python wheels
+name: Build Python wheels for MacOS-arm64
 
 on:
   workflow_dispatch
@@ -10,36 +10,27 @@ env:
 
 jobs:
   build:
-    name: Build Python wheels for ${{ matrix.os }}
+    name: Wheels for ${{ matrix.os }} and ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         os: [ 'macos-14' ]  # macos-arm64 only
         python-version: [ '3.9', '3.10', '3.11', '3.12' ]
-        # python-version: [ '3.10' ]
 
     steps:
-          
       - name: Checkout project
         uses: actions/checkout@v4
 
       # see https://github.com/marketplace/actions/setup-miniconda
       - name: Setup Conda
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
           #miniforge-version: latest
           miniconda-version: latest
           activate-environment: build-env
           python-version: ${{ matrix.python-version }}
-          # python-version: "3.10"
           channels: cadquery, conda-forge, defaults
-
-      - name: Pip Deps Setup 1
-        shell: bash -l {0}
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build setuptools wheel requests delocate delvewheel
 
       - name: Remove temp files
         shell: bash -l {0}
