--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build:
-    name: Wheels for ${{ matrix.os }} and ${{ matrix.python-version }}
+    name: Wheel for python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
