--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ 'ubuntu-20.04', 'macos-11', 'windows-2019' ]
+        os: [ 'ubuntu-20.04', 'macos-11', 'macos-14', 'windows-2019' ]
         python-version: [ '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
@@ -54,7 +54,7 @@ jobs:
           find ./ -iname *.whl
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: cadquery-vtk-${{ matrix.os }}-cp${{ matrix.python-version }}
           path: vtk/build/dist/*.whl
