--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout project
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - uses: actions/setup-python@v4
         with:
@@ -44,7 +44,11 @@ jobs:
         run: |
           pip3 install --upgrade setuptools
           mkdir -p ./vtk/build
-          wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          if [ "$RUNNER_OS" == "Windows"]; then
+            bitsadmin /addfile job1 https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  "${PWD}\\VTK-9.2.6.tar.gz"  # Update this for newer releases of VTK
+          else
+            wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          fi
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
