--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -45,6 +45,8 @@ jobs:
           pip3 install --upgrade setuptools
           mkdir -p ./vtk/build
           if [ "$RUNNER_OS" == "Windows" ]; then
+            bitsadmin /util /help
+            bitsadmin \/util \/help
             bitsadmin /addfile myDownloadJob https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz D:\a\ocp-build-system\ocp-build-system\vtk\VTK-9.2.6.tar.gz
           else
             wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
