--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -44,13 +44,7 @@ jobs:
         run: |
           pip3 install --upgrade setuptools
           mkdir -p ./vtk/build
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            bitsadmin /util /help
-            bitsadmin \/util \/help
-            bitsadmin /addfile myDownloadJob https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz D:\a\ocp-build-system\ocp-build-system\vtk\VTK-9.2.6.tar.gz
-          else
-            wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
-          fi
+          curl https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
