--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -44,10 +44,7 @@ jobs:
         run: |
           pip3 install --upgrade setuptools
           mkdir -p ./vtk/build
-          curl -L https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz --output VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
-          ls
-          ls ./vtk
-          cat VTK-9.2.6.tar.gz
+          curl https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz --output VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
