--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -30,37 +30,68 @@ jobs:
         shell: bash -l {0}
         # The `bdist_wheel` command requires the `wheel` package
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install --upgrade wheel
-          python3 -m pip freeze
-
+          python -V
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade wheel
+          python -m pip freeze
+          
+      - name: Setup Windows build environment (MSVC)
+        if: ${{ matrix.os == 'windows-2019' }}
+        uses: ilammy/msvc-dev-cmd@v1
+        
       - name: Ubuntu Deps
         shell: bash -l {0}
+        if: ${{ matrix.os != 'ubuntu-20.04' }}
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
-          fi
+          sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
+      
+      # - name: MacOS-11 Deps 
+      #   shell: bash -l {0}
+      #   if: ${{ matrix.os != 'macos-11' }}
+      #   run: |
 
-      - name: Windows Deps
+      - name: MacOS-14 Deps 
         shell: bash -l {0}
+        if: ${{ matrix.os != 'macos-14' }}
         run: |
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            choco install ninja
-          fi
+          brew install ninja
 
-      - name: Build Wheel from Scratch
+      # - name: Windows Deps
+      #   shell: bash -l {0} #cmd?
+      #   if: ${{ matrix.os != 'windows-2019' }}
+      #   run: |
+
+      - name: Build Wheel from Scratch (non-windows)
         shell: bash -l {0}
+        if: ${{ matrix.os != 'windows-2019' }}
         run: |
-          pip3 install --upgrade setuptools
+          python -V
+          pip install --upgrade setuptools
           mkdir -p ./vtk/build
           curl -L -O https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
           ninja
-          python3 setup.py bdist_wheel
+          python setup.py bdist_wheel
           cd ../../
           find ./ -iname *.whl
+
+      - name: Build Windows Wheel from Scratch
+        shell: cmd
+        if: ${{ matrix.os == 'windows-2019' }}
+        run: |
+          cl
+          pip install --upgrade setuptools
+          mkdir vtk\build
+          curl -L -O https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz
+          tar -zxf VTK-9.2.6.tar.gz --directory vtk\
+          cd vtk\build
+          cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ..\VTK-9.2.6
+          ninja
+          python setup.py bdist_wheel
+          cd ..\..\
+          dir /s
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
