--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -36,12 +36,12 @@ jobs:
           python -m pip freeze
           
       - name: Setup Windows build environment (MSVC)
-        if: ${{ matrix.os == 'windows-2019' }}
+        if: ${{ runner.os == 'Windows' }}
         uses: ilammy/msvc-dev-cmd@v1
         
       - name: Ubuntu Deps
         shell: bash -l {0}
-        if: ${{ matrix.os != 'ubuntu-20.04' }}
+        if: ${{ runner.os == 'Linux' }}
         run: |
           sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
       
@@ -52,7 +52,7 @@ jobs:
 
       - name: MacOS-14 Deps 
         shell: bash -l {0}
-        if: ${{ matrix.os != 'macos-14' }}
+        if: ${{ runner.os == 'macOS' }}
         run: |
           brew install ninja
 
@@ -63,7 +63,7 @@ jobs:
 
       - name: Build Wheel from Scratch (non-windows)
         shell: bash -l {0}
-        if: ${{ matrix.os != 'windows-2019' }}
+        if: ${{ runner.os != 'Windows' }}
         run: |
           python -V
           pip install --upgrade setuptools
@@ -79,7 +79,7 @@ jobs:
 
       - name: Build Windows Wheel from Scratch
         shell: cmd
-        if: ${{ matrix.os == 'windows-2019' }}
+        if: ${{ runner.os == 'Windows' }}
         run: |
           cl
           pip install --upgrade setuptools
