--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -13,10 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ 'ubuntu-20.04', 'macos-11', 'macos-14', 'windows-2019' ]
-        # os: [ 'ubuntu-20.04', 'macos-11', 'macos-14', 'windows-2019' ]
-        python-version: [ '3.11' ]
-        # python-version: [ '3.9', '3.10', '3.11', '3.12' ]
+        os: [ 'ubuntu-20.04', 'macos-13', 'macos-14', 'windows-2019' ]
+        python-version: [ '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
       - name: Checkout project
@@ -45,12 +43,12 @@ jobs:
         run: |
           sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
       
-      # - name: MacOS-11 Deps 
+      # - name: MacOS-13 Deps 
       #   shell: bash -l {0}
       #   if: ${{ matrix.os != 'macos-11' }}
       #   run: |
 
-      - name: MacOS-14 Deps 
+      - name: MacOS Deps # 13 and 14
         shell: bash -l {0}
         if: ${{ runner.os == 'macOS' }}
         run: |
