--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Setup Python Env
-        shell: bash -l {0}
+        # shell: bash -l {0}
         # The `bdist_wheel` command requires the `wheel` package
         run: |
           python -V
@@ -79,6 +79,7 @@ jobs:
         shell: cmd
         if: ${{ runner.os == 'Windows' }}
         run: |
+          python -V
           cl
           pip install --upgrade setuptools
           mkdir vtk\build
