--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -21,8 +21,17 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
+        if: ${{ runner.os != 'macOS' }} # setup-python is currently very broken for macos-14 and possibly 13 too
         with:
           python-version: ${{ matrix.python-version }}
+          
+      - name: Setup Micromamba on MacOS
+        if: ${{ runner.os == 'macOS' }} # setup-python is currently very broken for macos-14 and possibly 13 too
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-name: build-vtk # required by micromamba
+          create-args: >-
+            python=${{ matrix.python-version }}
 
       - name: Setup Python Env
         # shell: bash -l {0}
@@ -53,16 +62,34 @@ jobs:
         if: ${{ runner.os == 'macOS' }}
         run: |
           brew install ninja
+          micromamba info
 
       # - name: Windows Deps
       #   shell: bash -l {0} #cmd?
       #   if: ${{ matrix.os != 'windows-2019' }}
       #   run: |
 
-      - name: Build Wheel from Scratch (non-windows)
+      - name: Build Linux Wheel from Scratch
         shell: bash -l {0}
-        if: ${{ runner.os != 'Windows' }}
+        if: ${{ runner.os == 'Linux' }}
         run: |
+          python -V
+          pip install --upgrade setuptools
+          mkdir -p ./vtk/build
+          curl -L -O https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
+          cd ./vtk/build
+          cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
+          ninja
+          python setup.py bdist_wheel
+          cd ../../
+          find ./ -iname *.whl
+
+      - name: Build macOS Wheel from Scratch
+        shell: bash -l {0}
+        if: ${{ runner.os == 'macOS' }}
+        run: |
+          micromamba info
           python -V
           pip install --upgrade setuptools
           mkdir -p ./vtk/build
