Added selective wheel renaming

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -119,10 +119,29 @@ jobs:
           cd ..\..\
           dir /s
 
-      - name: Rename wheel
+      - name: Rename MacOS ARM64 wheel
         shell: bash -l {0}
+        if: ${{ matrix.os != 'macos-14' }}
         run: |
-          mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-${{ matrix.os }}.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ matrix.python-version }}-${{ matrix.os }}.whl
+          mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-macosx_14_0_arm64.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-macosx_14_0_arm64.whl
+
+      - name: Rename MacOS AMD64 wheel
+        shell: bash -l {0}
+        if: ${{ matrix.os != 'macos-13' }}
+        run: |
+          mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-macosx_13_0_x86_64.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-macosx_13_0_x86_64.whl
+
+      - name: Rename Linux AMD64 wheel
+        shell: bash -l {0}
+        if: ${{ matrix.os != 'ubuntu-20.04' }}
+        run: |
+          mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-linux_x86_64.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-linux_x86_64.whl
+
+      - name: Rename Windows AMD64 wheel
+        shell: bash -l {0}
+        if: ${{ matrix.os != 'windows-2019' }}
+        run: |
+          mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-win_amd64.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ matrix.python-version }}-cp${{ matrix.python-version }}-win_amd64.whl
 
       - name: Test wheel
         shell: bash -l {0}
