--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -93,7 +93,7 @@ jobs:
           python -V
           pip install --upgrade setuptools
           mkdir -p ./vtk/build
-          curl -L -O https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          curl -L -O https://vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.6
@@ -110,7 +110,7 @@ jobs:
           cl
           pip install --upgrade setuptools
           mkdir vtk\build
-          curl -L -O https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz
+          curl -L -O https://vtk.org/files/release/9.2/VTK-9.2.6.tar.gz
           tar -zxf VTK-9.2.6.tar.gz --directory vtk\
           cd vtk\build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ..\VTK-9.2.6
