--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ 'ubuntu-20.04', 'macos-13', 'macos-14', 'windows-2019', 'arm64-build-svr' ]
+        os: [ 'ubuntu-20.04', 'macos-13', 'macos-14', 'windows-2019', 'debian-12-arm64' ]
         python-version: [ '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
