Trying to edit the wheel to alter the name automatically

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -147,10 +147,21 @@ jobs:
         run: |
           echo "WHEEL_OS_VERSION=win_amd64" >> $GITHUB_ENV
 
-      - name: Move wheel
+      - name: Edit wheel
         shell: bash -l {0}
         run: |
-          mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ env.PYTHON_VERSION_NO_DOTS }}-cp${{ env.PYTHON_VERSION_NO_DOTS }}-${{ env.WHEEL_OS_VERSION }}.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ env.PYTHON_VERSION_NO_DOTS }}-cp${{ env.PYTHON_VERSION_NO_DOTS }}-${{ env.WHEEL_OS_VERSION }}.whl
+          wheel_file=$(ls vtk/build/dist/*.whl | xargs -n 1 basename)  # Get the wheel file name from an ls of the dist directory
+          mkdir wheel_build/  # Make a separate build directory
+          unzip $wheel_file -d wheel_build/  # Extract the wheel file
+          sed -i 's/Name:.*$/Name: cadquery_vtk/' wheel_build/*.dist-info/METADATA  # Change the name in the METADATA file
+          sed -i 's/Version:.9.2.6.dev0$/Version: 9.2.6/' wheel_build/*.dist-info/METADATA  # Remove the .dev0 from the version in the METADATA file
+          mv wheel_build/*.dist-info wheel_build/cadquery_vtk-9.2.6.dist-info  # Rename the dist-info file to the new name
+          cd wheel_build/
+          zip -r cadquery_${wheel_file} *  # Create a new wheel file with the new name by prepending "cadquery_" to the name
+          rm ../vtk/build/dist/*.whl  # Remove the old wheel file
+          mv cadquery_${wheel_file} ../vtk/build/dist/  # Move the new wheel file to the dist directory
+          cd ../
+          # mv vtk/build/dist/vtk-9.2.6.dev0-cp${{ env.PYTHON_VERSION_NO_DOTS }}-cp${{ env.PYTHON_VERSION_NO_DOTS }}-${{ env.WHEEL_OS_VERSION }}.whl vtk/build/dist/cadquery-vtk-9.2.6-cp${{ env.PYTHON_VERSION_NO_DOTS }}-cp${{ env.PYTHON_VERSION_NO_DOTS }}-${{ env.WHEEL_OS_VERSION }}.whl
 
       - name: Test wheel
         shell: bash -l {0}
