Fixed bug where script assumed the file was in the root directory

--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -153,7 +153,7 @@ jobs:
           wheel_file=$(ls vtk/build/dist/*.whl | xargs -n 1 basename)  # Get the wheel file name from an ls of the dist directory
           echo $wheel_file
           mkdir wheel_build/  # Make a separate build directory
-          unzip $wheel_file -d wheel_build/  # Extract the wheel file
+          unzip vtk/build/dist/${wheel_file} -d wheel_build/  # Extract the wheel file
           sed -i 's/Name:.*$/Name: cadquery_vtk/' wheel_build/*.dist-info/METADATA  # Change the name in the METADATA file
           sed -i 's/Version:.9.2.6.dev0$/Version: 9.2.6/' wheel_build/*.dist-info/METADATA  # Remove the .dev0 from the version in the METADATA file
           mv wheel_build/*.dist-info wheel_build/cadquery_vtk-9.2.6.dist-info  # Rename the dist-info file to the new name
