--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -157,8 +157,7 @@ jobs:
           sed -i 's/Name:.*$/Name: cadquery_vtk/' wheel_build/*.dist-info/METADATA  # Change the name in the METADATA file
           sed -i 's/Version:.9.2.6.dev0$/Version: 9.2.6/' wheel_build/*.dist-info/METADATA  # Remove the .dev0 from the version in the METADATA file
           mv wheel_build/*.dist-info wheel_build/cadquery_vtk-9.2.6.dist-info  # Rename the dist-info file to the new name
-          cd wheel_build/
-          zip -r cadquery_${wheel_file} *  # Create a new wheel file with the new name by prepending "cadquery_" to the name
+          wheel pack wheel_build/;  # Create a new wheel file with the new name by prepending "cadquery_" to the name
           rm ../vtk/build/dist/*.whl  # Remove the old wheel file
           mv cadquery_${wheel_file} ../vtk/build/dist/  # Move the new wheel file to the dist directory
           cd ../
